--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>Document</title>
     </head>
     <body>
-        <button onclick="myFunction()">Saludar</button>
+        <button onclick="saludo()">Saludar</button>
+        <script>
+            function saludo() {
+                alert("Hola!");
+            }
+        </script>
     </body>
 </html>
